# game-of-life-haskell

./: LICENSE  README.md  gameoflife.cabal
src/: Main.hs
