name:                gameoflife
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/gameoflife#readme
license:             BSD3
license-file:        LICENSE
author:              Forrest Li
maintainer:          fcli@cs.unc.edu
copyright:           2017 Forrest Li
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable gameoflife-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, sdl2, linear, vector
                     , gameoflife
  default-language:    Haskell2010

test-suite gameoflife-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gameoflife
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/gameoflife
