name:                gameoflife
version:             0.1.0.0
synopsis:            Conway's Game of Life
description:         Game of Life, implemented in Haskell.
homepage:            https://github.com/floryst/game-of-life-haskell
license:             BSD3
license-file:        LICENSE
author:              Forrest Li
maintainer:          fcli@cs.unc.edu
copyright:           2017 Forrest Li
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gameoflife
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, sdl2, linear, vector
  default-language:    Haskell2010

test-suite gameoflife-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gameoflife
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/gameoflife
